syntax = "proto3";

package karps.core;

import "types.proto";

enum Locality {
  LOCAL = 0;
  DISTRIBUTED = 1;
};

// A node in a computation graph.
message Node {
  Locality locality = 1;
  Path path = 2;
  string op_name = 3;
  OpExtra op_extra = 4;
  repeated Path parents = 5;
  repeated Path logical_dependencies = 6;
  SQLType infered_type = 7;
};

message Graph {
  repeated Node nodes = 1;
};

// The local path of an element.
message Path {
  repeated string path = 1;
};

message OpExtra {
  string op_name = 1;
  string op_exra = 2; // TODO: should by bytestring?
};
